Przypisane risk factory, dodana funkcja

--- a/voting-flask-application-master/voting-flask-application-master/templates/form.html
+++ b/voting-flask-application-master/voting-flask-application-master/templates/form.html
@@ -28,7 +28,7 @@
         <label for="antykoncepcja" class="title"> Czy w obecnym czasie stosujesz lub w przeciągu ostatnich 8 lat stosowałaś doustną antykoncepcję hormonalną?
 </label>
         <label class="radio">Tak, przez ponad 10 lat
-          <input type="radio"  name="antykoncepcja" value="10+">
+          <input type="radio"  name="antykoncepcja" id="antykoncepcja" value="10+">
           <span class="checkround"></span>
           </label>
         <label class="radio">Tak, przez ponad 5, ale krócej niż 10 lat
@@ -259,7 +259,7 @@
                         </div>
                         <?-- 11 pytanie -->
                         <div class="form-group">
-                          <label for="chorzySM" class="title">Czy w Twojej rodzinie do 2 pokoleń wstecz występowały przypadki zachorowania na nowotwór szyjki macicy?</label>
+                          <label for="chorzySM" class="title">Czy w Twojej rodzinie do 1 pokoleń wstecz występowały przypadki zachorowania na nowotwór szyjki macicy?</label>
                           <select class="form-control" id="chorzySM" name="chorzySM" required>
                             <option>Tak</option>
                             <option>Nie</option>
