--- a/voting-flask-application-master/voting-flask-application-master/templates/form.html
+++ b/voting-flask-application-master/voting-flask-application-master/templates/form.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +21,7 @@
     <div class="w3-theme-light w3-round"  style="padding:30px; margin: auto; max-width: 700px;">
 
 <!-- extend base layout -->
-
+{% block body %}
 
 
 <form role="form" action="/save" method="post">
@@ -184,19 +186,19 @@
                       <label for="palenie" class="title"> Przypomnij sobie okres ostatnich 3 miesięcy. W ciągu tego okresu, ile papierosów wypalałaś średnio w ciągu doby?
               </label>
                       <label class="radio">nie palę
-                        <input type="radio"  name="  palenie" value="0" required>
+                        <input type="radio"  name="palenie" value="0" required>
                         <span class="checkround"></span>
                         </label>
                       <label class="radio">11 – 20 papierosów
-                        <input type="radio"  name="  palenie" value="11-20">
+                        <input type="radio"  name="palenie" value="11-20">
                         <span class="checkround"></span>
                         </label>
                       <label class="radio">20 – 30 papierosów
-                        <input type="radio"  name="  palenie" value="20-30">
+                        <input type="radio"  name="palenie" value="20-30">
                         <span class="checkround"></span>
                         </label>
                       <label class="radio">powyżej 30 papierosów
-                        <input type="radio"  name="  palenie" value="30+">
+                        <input type="radio"  name="palenie" value="30+">
                         <span class="checkround"></span>
                         </label>
                   </div>
