--- a/voting-flask-application-master/voting-flask-application-master/templates/form.html
+++ b/voting-flask-application-master/voting-flask-application-master/templates/form.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,7 +19,7 @@
     <div class="w3-theme-light w3-round"  style="padding:30px; margin: auto; max-width: 700px;">
 
 <!-- extend base layout -->
-{% block body %}
+
 
 
 <form role="form" action="/save" method="post">
@@ -30,7 +28,7 @@
         <label for="antykoncepcja" class="title"> Czy w obecnym czasie stosujesz lub w przeciągu ostatnich 8 lat stosowałaś doustną antykoncepcję hormonalną?
 </label>
         <label class="radio">Tak, przez ponad 10 lat
-          <input type="radio"  name="antykoncepcja" id="antykoncepcja" value="10+">
+          <input type="radio"  name="antykoncepcja" value="10+">
           <span class="checkround"></span>
           </label>
         <label class="radio">Tak, przez ponad 5, ale krócej niż 10 lat
@@ -104,7 +102,7 @@
           </div>
           <?-- 4 pytanie -->
             <div class="form-group" id="ciaza" style="visibility:hidden;display:none;">
-                <label for="ciaza" class="title">  Ilość przebytych ciąż:
+                <label for="ciaza" class="title">  Liczba przebytych ciąż:
         </label>
                 <label class="radio">brak
                   <input type="radio" id="ciaza"   name="ciaza" value="0"  onclick="javascript:show(id,value)">
@@ -186,19 +184,23 @@
                       <label for="palenie" class="title"> Przypomnij sobie okres ostatnich 3 miesięcy. W ciągu tego okresu, ile papierosów wypalałaś średnio w ciągu doby?
               </label>
                       <label class="radio">nie palę
-                        <input type="radio"  name="palenie" value="0" required>
+                        <input type="radio"  name="  palenie" value="0" required>
                         <span class="checkround"></span>
                         </label>
+                        <label class="radio">1 – 10 papierosów
+                          <input type="radio"  name="  palenie" value="1-10">
+                          <span class="checkround"></span>
+                          </label>
                       <label class="radio">11 – 20 papierosów
-                        <input type="radio"  name="palenie" value="11-20">
+                        <input type="radio"  name="  palenie" value="11-20">
                         <span class="checkround"></span>
                         </label>
                       <label class="radio">20 – 30 papierosów
-                        <input type="radio"  name="palenie" value="20-30">
+                        <input type="radio"  name="  palenie" value="20-30">
                         <span class="checkround"></span>
                         </label>
                       <label class="radio">powyżej 30 papierosów
-                        <input type="radio"  name="palenie" value="30+">
+                        <input type="radio"  name="  palenie" value="30+">
                         <span class="checkround"></span>
                         </label>
                   </div>
@@ -261,7 +263,7 @@
                         </div>
                         <?-- 11 pytanie -->
                         <div class="form-group">
-                          <label for="chorzySM" class="title">Czy w Twojej rodzinie do 1 pokoleń wstecz występowały przypadki zachorowania na nowotwór szyjki macicy?</label>
+                          <label for="chorzySM" class="title">Czy w Twojej rodzinie do 2 pokoleń wstecz występowały przypadki zachorowania na nowotwór szyjki macicy?</label>
                           <select class="form-control" id="chorzySM" name="chorzySM" required>
                             <option>Tak</option>
                             <option>Nie</option>
@@ -321,7 +323,7 @@
                                 <input type="radio"  name="miasto" value="500">
                                 <span class="checkround"></span>
                                 </label>
-                              <label class="radio">miasto powyżej 500 Tys
+                              <label class="radio">miasto powyżej 500 tys.
                                 <input type="radio"  name="miasto" value="500+">
                                 <span class="checkround"></span>
                                 </label>
