--- a/voting-flask-application-master/voting-flask-application-master/templates/index.html
+++ b/voting-flask-application-master/voting-flask-application-master/templates/index.html
@@ -85,6 +85,7 @@
             </div>
             <div class="modal-footer">
               <button type="submit" class="btn btn-default" data-dismiss="modal" >Wróć</button>
+              <button type="button" id="dalej" value="formView" class="w3-btn w3-round-xxlarge w3-theme-dark" onclick="setAction(this,value)" style="display:none"> Dalej </button>
             </div>
           </form>
           </div>
