google charts was created

--- a/voting-flask-application-master/voting-flask-application-master/templates/result.html
+++ b/voting-flask-application-master/voting-flask-application-master/templates/result.html
@@ -3,24 +3,69 @@
 
 {% block content %}
 
-<div class="page-header">
-    <h1>Results</h1>
-    <div id="chart_div"> </div>
-</div>
+    <div class="page-header">
+        <h1>Wyniki</h1>
+        <div id="scatter_div"></div>
 
-<script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<script type="text/javascript">
-  google.load('visualization', '1', {'packages':['corechart']});
-  google.setOnLoadCallback(drawChart);
-  function drawChart() {
-    var data = new google.visualization.DataTable();
-    data.addColumn('string', 'Question');
-    data.addColumn('number', 'Average answer');
-    data.addRows( {{ data|tojson }} );
-    var chart = new google.visualization.ColumnChart(
-            document.getElementById('chart_div'));
-    chart.draw(data, {legend: 'none', vAxis: {baseline: 0} });
-  }
-</script>
+        <div id="pie_div" style="height: 500px;"></div>
+
+        <div id="bar_div"></div>
+    </div>
+
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+        google.load('visualization', '1', {'packages': ['corechart']});
+        google.setOnLoadCallback(drawScatterChart);
+        google.setOnLoadCallback(drawPieChart);
+        google.setOnLoadCallback(drawBarChart);
+
+        function drawScatterChart() {
+            var data = new google.visualization.DataTable();
+            data.addColumn('string', 'Numer ankiety');
+            data.addColumn('number', 'Risk factor');
+            data.addRows({{ data[0]|tojson }});
+
+            var options = {
+                title: 'Twój wynik na tle innych ankietowanych',
+                legend: 'none',
+                hAxis: {title: 'Numer ankiety', minValue: 0},
+                vAxis: {title: 'Risk factor', minValue: 0}
+            };
+
+            var chart = new google.visualization.ScatterChart(document.getElementById('scatter_div'));
+            chart.draw(data, options);
+        }
+
+        function drawPieChart() {
+            var data = new google.visualization.DataTable();
+            data.addColumn('string', 'Czynnik');
+            data.addColumn('number', 'Ryzyko');
+            data.addRows({{ data[1]|tojson }});
+
+            var options = {
+                title: 'Wśród osób badanych, który z czynników miał największy wpływ na prawdopodobieństwo zachorowania?',
+            };
+
+            var chart = new google.visualization.PieChart(document.getElementById('pie_div'));
+            chart.draw(data, options);
+        }
+
+        function drawBarChart() {
+            var data = new google.visualization.DataTable();
+            data.addColumn('string', 'Stopień ryzyka');
+            data.addColumn('number', 'Średnia wykonywanych cytologii');
+            data.addRows({{ data[2]|tojson }});
+
+            var options = {
+                title: 'Korelacja grupy ryzyka i częstości wykonywania cytologii',
+                legend: 'none',
+                vAxis: {title: 'Średnia wykonywanych cytologii', minValue: 0, baseline: 0},
+                hAxis: {title: 'Stopień ryzyka', minValue: 0}
+            };
+
+            var chart = new google.visualization.ColumnChart(document.getElementById('bar_div'));
+            chart.draw(data, options);
+        }
+    </script>
 
 {% endblock %}
