/form trzeba z palca bo przekierowanie nie działa, ale zapisuje do bazy

--- a/voting-flask-application-master/voting-flask-application-master/templates/index.html
+++ b/voting-flask-application-master/voting-flask-application-master/templates/index.html
@@ -1,3 +1,4 @@
+{% block body %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -89,19 +90,15 @@
             </div>
           </form>
           </div>
-          <!-- Modal -->
+
 
   </div>
   </div>
-
-<!--Formularz -->
-
-
-
 
 </div>
 </body>
 
-
 </body>
 </html>
+
+{% endblock %}
