--- a/voting-flask-application-master/voting-flask-application-master/templates/form.html
+++ b/voting-flask-application-master/voting-flask-application-master/templates/form.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+
+{% block body %}
+
+
+
 <html lang="en">
 <head>
   <title>Ankieta dot. raka szyjki macicy</title>
@@ -188,11 +192,11 @@
                       <label for="palenie" class="title"> Przypomnij sobie okres ostatnich 3 miesięcy. W ciągu tego okresu, ile papierosów wypalałaś średnio w ciągu doby?
               </label>
                       <label class="radio">nie palę
-                        <input type="radio"  name="  palenie" value="0" required>
+                        <input type="radio"  name="palenie" value="0" required>
                         <span class="checkround"></span>
                         </label>
                         <label class="radio">1 – 10 papierosów
-                          <input type="radio"  name="  palenie" value="1-10">
+                          <input type="radio"  name="palenie" value="1-10">
                           <span class="checkround"></span>
                           </label>
                       <label class="radio">11 – 20 papierosów
@@ -200,11 +204,11 @@
                         <span class="checkround"></span>
                         </label>
                       <label class="radio">20 – 30 papierosów
-                        <input type="radio"  name="  palenie" value="20-30">
+                        <input type="radio"  name="palenie" value="20-30">
                         <span class="checkround"></span>
                         </label>
                       <label class="radio">powyżej 30 papierosów
-                        <input type="radio"  name="  palenie" value="30+">
+                        <input type="radio"  name="palenie" value="30+">
                         <span class="checkround"></span>
                         </label>
                   </div>
@@ -285,7 +289,7 @@
 
                         <?-- nowe 2 --?>
                         <div class="form-group" id="HPV" style="visibility:hidden;display:none;">
-                            <label for="ciaza" class="title">  Jakiego typu był ten wirus?
+                            <label for="HPV" class="title">  Jakiego typu był ten wirus?
                     </label>
                             <label class="radio">typ 6, 11 lub 42
                               <input type="radio" id="HPV"   name="HPV" value="0">
